# tccp

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md  dev.sh  rel.sh  releases  vcpkg.json
.github/workflows/: build.yml  pages.yml  release.yml  update-tap.yml
docs/: architecture.html  commands.html  contact.html  gpus.html  index.html  install.html  install.ps1  install.sh  llms.txt  settings.html  style.css  usage.html  version.js
experiments/dual_shell/: CMakeLists.txt  main.cpp
experiments/tmux_control/: CMakeLists.txt  main.cpp
experiments/tunnel_login/: CMakeLists.txt  main.cpp
experiments/tunnel_sftp/: CMakeLists.txt  main.cpp
experiments/tunnel_shell/: CMakeLists.txt  main.cpp
scratch/: compute-allocation.txt  jon-run-spec.txt
scripts/: dev.sh  run_tests.sh  test.sh
src/: config.cpp  config.hpp  debug.hpp  main.cpp  session.cpp  session.hpp  ssh.cpp  ssh.hpp  state.cpp  state.hpp  sync.cpp  sync.hpp  theme.hpp  types.hpp
src/cli/: CMakeLists.txt  base_cli.cpp  base_cli.hpp  job_view.cpp  job_view.hpp  manual_pages.cpp  preflight.cpp  preflight.hpp  setup_wizards.cpp  tccp_cli.cpp  tccp_cli.hpp  terminal_output.cpp  terminal_output.hpp  terminal_ui.cpp  terminal_ui.hpp  theme.hpp
src/cli/commands/: allocations.cpp  connection.cpp  credentials.cpp  job_helpers.cpp  job_helpers.hpp  job_logs.cpp  job_view_cmd.cpp  jobs.cpp  setup.cpp  shell.cpp
src/core/: CMakeLists.txt  config.cpp  config.hpp  constants.hpp  credentials.cpp  credentials.hpp  directory_structure.cpp  directory_structure.hpp  resource_spec.cpp  resource_spec.hpp  time_utils.cpp  time_utils.hpp  types.hpp  utils.cpp  utils.hpp
src/core/platform/: credentials_file.cpp  credentials_linux.cpp  credentials_macos.cpp  credentials_win.cpp
src/environments/: CMakeLists.txt  environment.cpp  environment.hpp  python_template.cpp  qwen_template.cpp  templates.cpp  templates.hpp
src/managers/: CMakeLists.txt  allocation_manager.cpp  allocation_manager.hpp  allocation_store.cpp  allocation_store.hpp  cache_manager.cpp  cache_manager.hpp  gitignore.cpp  gitignore.hpp  gpu_discovery.cpp  gpu_discovery.hpp  job_cancel.cpp  job_cleanup.cpp  job_environment.cpp  job_log.hpp  job_manager.cpp  job_manager.hpp  job_metadata.cpp  job_metadata.hpp  job_output.cpp  job_poll.cpp  job_poll_watcher.cpp  job_poll_watcher.hpp  job_stream.cpp  job_stream.hpp  job_watcher.cpp  job_watcher.hpp  port_forwarder.cpp  port_forwarder.hpp  slurm_helpers.cpp  slurm_helpers.hpp  state_store.cpp  state_store.hpp  sync_manager.cpp  sync_manager.hpp  tccp_service.cpp  tccp_service.hpp
src/platform/: CMakeLists.txt  archive.cpp  archive.hpp  platform.cpp  platform.hpp  process.cpp  process.hpp  singleton.cpp  singleton.hpp  socket_util.cpp  socket_util.hpp  terminal.cpp  terminal.hpp
src/ssh/: CMakeLists.txt  auth.cpp  auth.hpp  cluster_connection.cpp  cluster_connection.hpp  compute_hop.cpp  compute_hop.hpp  connection.cpp  connection.hpp  connection_factory.cpp  connection_factory.hpp  expect.cpp  expect.hpp  login_hop_connection.cpp  login_hop_connection.hpp  marker_protocol.cpp  marker_protocol.hpp  multiplexed_connection.cpp  multiplexed_connection.hpp  multiplexed_login_hop.cpp  multiplexed_login_hop.hpp  multiplexed_shell.cpp  multiplexed_shell.hpp  result.hpp  session.cpp  session.hpp  session_multiplexer.cpp  session_multiplexer.hpp  shell_channel.cpp  shell_channel.hpp  shell_relay.cpp  shell_relay.hpp  tunnel_transfer.cpp  tunnel_transfer.hpp
src/util/: CMakeLists.txt  path_utils.cpp  path_utils.hpp  process.cpp  process.hpp  string_utils.cpp  string_utils.hpp
tests/: CMakeLists.txt  test_allocation_logic.cpp  test_allocation_time.cpp  test_archive.cpp  test_config.cpp  test_gitignore.cpp  test_gpu_selection.cpp  test_resource_spec.cpp  test_state_invariants.cpp  test_state_store.cpp  test_time_utils.cpp
tests/integration/: test_fixture.cpp  test_fixture.hpp  test_int_alloc_edge_cases.cpp  test_int_alloc_reuse.cpp  test_int_allocation.cpp  test_int_cache.cpp  test_int_cancel_edge_cases.cpp  test_int_cancel_timing.cpp  test_int_cleanup.cpp  test_int_concurrent_jobs.cpp  test_int_connect.cpp  test_int_corrupt_state.cpp  test_int_crash_recovery.cpp  test_int_data_integrity.cpp  test_int_disconnect_reconnect.cpp  test_int_env.cpp  test_int_environment.cpp  test_int_init_failure.cpp  test_int_job_execution.cpp  test_int_job_lifecycle.cpp  test_int_large_sync.cpp  test_int_multi_job.cpp  test_int_output.cpp  test_int_output_edge.cpp  test_int_pip.cpp  test_int_port_forward.cpp  test_int_shell_env.cpp  test_int_stale_state.cpp  test_int_state_sync.cpp  test_int_sync.cpp  test_int_timeout.cpp
